# django-auth

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  README.rst  requirements-dev.txt  requirements.txt  setup.cfg
auth/: README.rst  admin.py  apps.py  auth.py  helpers.py  models.py  setup.cfg  urls.py  views.py
auth/migrations/: 0000_fix_label_name.py  0001_initial.py  0002_auto_20220929_1559.py
auth/tests/: test_auth.py  test_views.py
django_auth/: asgi.py  settings.py  urls.py  wsgi.py
hooks/: pre-commit
