[metadata]
name = django-auth
version = 1.0.0
description = A Django app for authenticating users.
long_description = file: README.rst
author = EventKit Contributors
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = auth
install_requires =
    Django >= 3.0.0, < 4.0.0
    requests >= 2.0.0, <= 2.25.1

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[coverage:run]
include = auth/*
omit = *migrations*, *tests*
plugins =
    django_coverage_plugin
